--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -156,7 +156,8 @@
 
 %
 %
-\title{Formulating RDF Constraints and \\ Validating RDF Data Generically}
+%\title{Formulating RDF Constraints and \\ Validating RDF Data Generically}
+\title{Formulating RDF Constraints Generically and Validating RDF Data Out-Of-The-Box }
 %\subtitle{}
 %
 \titlerunning{XXXXX}  % abbreviated title (for running head)
@@ -182,10 +183,10 @@ University of Mannheim, Germany \\
 More and more domains adopt Linked Data principles
 and seek for ways to ensure data quality by validating RDF data according to predefined constraints, 
 particularly as many communities are used to have this functionality in the XML world.
-XML Schema is the standard constraint language to formulate constraints on and to validate XML documents.
+XML Schema is the standard language to formulate constraints on and to validate XML documents.
 For RDF, however, there are several candidates for languages to express constraints on RDF data - but no standard one meeting the majority of RDF validation use cases.
-We identified requirements to formulate constraints and to validate RDF data and mapped each requirement to an RDF constraint type.
-The majority of these constraint types can be represented in description logics providing their logical underpinning.
+We identified requirements to formulate constraints and to validate RDF data and mapped each requirement to a constraint type.
+The majority of these constraint types can be expressed in description logics providing their logical underpinning.
 
 %In this paper, we provide a basic terminology and classification system for RDF constraints.\tb{The contributions of this paper are the following. (1)...}
 %We developed a vocabulary to describe constraints of any RDF constraint type generically. 
@@ -195,9 +196,9 @@ The majority of these constraint types can be represented in description logics 
 
 The \textbf{contributions} of this paper are:
 (1) we provide a basic terminology and classification system for RDF constraints,
-(2) we developed a vocabulary to describe constraints of any constraint type generically,
+(2) we developed a vocabulary to describe constraints of any constraint type generically and specified its underlying semantics,
 (3) we show how to transform constraints, expressed by any constraint language \ms{$\alpha$}, into generically expressed constraints and into constraints represented by any other constraint language \ms{$\beta$} and discuss why these transformations are useful, and
-(4) we explain how to overcome the necessity to implement the validation of each constraint type for multiple constraint languages.
+(4) we explain how to overcome the necessity to implement the validation of each constraint type for diverse constraint languages.
 
 \keywords{RDF Validation, RDF Constraints, RDF Validation Requirements, Linked Data, Semantic Web}
 \end{abstract}
@@ -206,7 +207,6 @@ The \textbf{contributions} of this paper are:
 % ---------------
 
 \section{Introduction}
-\tb{feedback from Erman: the major problem is semantics. OWL basically work in different semantics than others. And their semantics are formal. Closed world vs. Open World is also a part of this.}
 %The purpose of OWL 2 ontologies is to perform reasoning on RDF data and not to validate RDF data conforming to these ontologies.
 %OWL 2 is based on the {\em non-unique name assumption} (nUNA) whereas RDF validation requires that different names represent different objects ({\em unique name assumption} (UNA)). 
 %Reasoning in OWL 2 is based on the semantics of {\em open-world assumption} (OWA), i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. 
@@ -229,8 +229,8 @@ A typical example is the definition of a library record describing a book. There
 
 \section{Motivation}
 
-There is not the one language meeting the majority of requirements to formulate constraints.
-As there are more than 10 candidate languages with different syntaxes and semantics which can be used to express constraints, 
+There is not the one language meeting the majority of requirements to formulate constraints and validate RDF data.
+As there are more than 10 candidate languages with different syntaxes and semantics which can be used to express constraints and to validate RDF data, 
 %(e.g. existential and universal quantification, cardinality restrictions, and exclusive or of properties)
 the language selection heavily depends on the individual use case.
 The five most promising constraint languages on being the standard are
@@ -247,7 +247,7 @@ and the \emph{Web Ontology Language (OWL 2)}.
 % - constraint / constraint elements / constraint design patterns / constraint language
 %dependency between requirements / when this requirements is fulfilled then this is also fulfilled (e.g. min card and requ. car)
 %min car more powerful than req. propery
-The idea behind this paper is to achieve complete RDF validation requirements coverage by representing any constraint type (corresponding to a requirement to formulate constraints) in a generic way using a lightweight vocabulary consisting of only a few terms (see section \ref{sec:vocabulary}).
+The idea behind this paper is to achieve complete RDF validation requirements coverage by representing any constraint type (corresponding to a requirement to formulate constraints and to validate RDF data) in a generic way using a lightweight vocabulary consisting of only a few terms (see section \ref{sec:vocabulary}).
 
 \emph{Cardinality restrictions}, e.g., can be expressed either generically (\textbf{\emph{generic constraints}}) by \emph{description logics (DL)} 
 %and extensions  
@@ -300,7 +300,7 @@ The data is valid, however, if \emph{The-Lord-Of-The-Rings} is connected to a \e
 As there is no standard way to formulate constraints, 
 semantically equivalent \emph{cardinality restrictions} may be represented by multiple constraint languages with different syntax and semantics.
 This causes confusion and weakens the common understanding between several parties about the semantics of particular constraints and therefore how to ensure high data quality. 
-Thus, when choosing constraint language \ms{$\alpha$} to express a constraint of an arbitrary constraint type, it should be possible to transform this constraint into a semantically equivalent \tb{Erman thinks formal generic semantics should be defined} constraint formulated by any other constraint language \ms{$\beta$} (see section \ref{sec:transformations}). 
+Thus, when choosing constraint language \ms{$\alpha$} to express a constraint of an arbitrary constraint type, it should be possible to transform this constraint into a semantically equivalent constraint formulated by any other constraint language \ms{$\beta$} (see section \ref{sec:transformations}). 
 This is important in order to enhance the interoperability of constraint languages and to resolve ambiguities in the communication of RDF data producers and consumers, 
 as constraint transformations avoid the necessity to understand several constraint languages.
 
@@ -328,7 +328,7 @@ This paper aims to address two main \textbf{audiences}:
 (2) RDF practitioners thinking of how to provide aligned implementations for the validation of both existing an newly developed constraint languages.
 The main \textbf{contributions} of this paper are:
 (1) we provide a basic terminology and classification system for RDF constraints (section \ref{sec:vocabulary}),
-(2) we developed a vocabulary to describe constraints of any RDF constraint type generically (section \ref{sec:vocabulary}),
+(2) we developed a vocabulary to describe constraints of any RDF constraint type generically and specified its underlying semantics (section \ref{sec:vocabulary}),
 (3) we show how to transform constraints, expressed by any constraint language \ms{$\alpha$}, into generically expressed constraints and into constraints represented by any other constraint language \ms{$\beta$} and discuss why these transformations are useful (section \label{ref:transformations}), and
 (4) we explain how to overcome the necessity to implement the validation of each constraint type for multiple constraint languages (section \ref{sec:validation}).
 %(if the validation is implemented once for the corresponding \emph{generic constraint type} to which the \emph{specific constraint type} is mapped)
@@ -404,7 +404,31 @@ The main \textbf{contributions} of this paper are:
 \section{A Vocabulary to Describe RDF Constraints Generically} 
 \label{sec:vocabulary}
 
-In order to develop a vocabulary to describe constraints of any constraint type generically, it is needed to define the basic terminology for the formulation of constraints and to classify them. 
+In order to develop a vocabulary to describe constraints of any constraint type in a generic way, prerequisites are to specify the vocabulary's underlying semantics, to define the basic terminology for the formulation of constraints, and to classify them. 
+The underlying \textbf{\emph{semantics}} for RDF validation are \emph{UNA} and \emph{CWA}.
+RDF validation requires that different names represent different objects ({\em unique name assumption (UNA)}), whereas,
+\emph{OWL 2} is based on the {\em non-unique name assumption (nUNA)}. 
+A data property is \emph{functional} (\emph{R-65}) if for each individual \emph{x}, there can be at most one distinct literal \emph{y} such that \emph{x} is connected by the data property to \emph{y}.
+When assuming \emph{UNA}, the functional property {\em title} (\ms{funct (title)}) causes a clash
+in case the book {\em Huckleberry-Finn} has more than one \emph{title}
+(\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}, \ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)}).
+Assuming nUNA, however, reasoning concludes that the titles {\em The-Adventures-of-Huckleberry-Finn} and {\em Die-Abenteuer-des-Huckleberry-Finn} are the same (\ms{\{The-Adventures-of-Huckleberry-Finn\}} = \ms{\{Die-Abenteuer-des-Huckle} \ms{berry-}\ms{Finn\}}).  
+
+Reasoning in \emph{OWL 2} is based on the {\em open-world assumption (OWA)}, i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose to represent knowledge on the World Wide Web. 
+%Most of the constraint languages except OWL, have a major shortcoming of redundancy.
+%With its open-world semantics, used as a constraint language, OWL solves the redundancy problem. 
+%\tb{the following example does not show the redundancy problem!}
+%\tb{2. benefit: reasoning solves redundancy problem}
+As each \emph{book} must have a \emph{title} (\ms{Book $\sqsubseteq \exists$ title.$\top$}) and {\em Hamlet} is a \emph{book} (\ms{Book(Hamlet)}),
+{\em Hamlet} must have at least one \emph{title}.
+In an \emph{OWA} setting, this axiom does not cause a constraint violation (even if there is no explicitly defined \emph{title}), since there must be a \emph{title} for this \emph{book} which we may not know. 
+On the other hand, RDF validation scenarios require the {\em closed-world assumption (CWA)}, i.e., a statement is inferred to be false if it cannot be proved to be true.
+Hence, classical constraint languages are based on the \emph{CWA} where constraints need to be satisfied only by named individuals which yields in return to a constraint violation.
+This ambiguity in semantics is one of the main reasons why \emph{OWL 2} has not been adopted as a standard constraint language for RDF validation in the past.  
+Thus, in case we want to use \emph{OWL 2} as a constraint language, we adopt the same semantics than for RDF validation in general. 
+\tb{feedback from Erman: the major problem is semantics. OWL basically work in different semantics than others. And their semantics are formal. Closed world vs. Open World is also a part of this. / Thomas: I think your issue is tackled now?}
+\tb{Erman thinks formal generic semantics should be defined / Thomas: what do you mean by this? / I inserted these 2 paragraphs about RDF validation semantics. Are your concerns resolved now?}
+
 A \textbf{\emph{constraint language}} is a language which is used to formulate constraints.
 The W3C Data Shapes working group defines \textbf{\emph{RDF constraint}} as a component of a schema what needs to be satisfied\footnote{\url{https://www.w3.org/2014/data-shapes/wiki/Glossary}}.
 We identified four dimensions to classify constraint types:
@@ -1205,7 +1229,7 @@ Thus, the majority of constraint types are directly and relatively easy formulat
 
 \section{Related Work}
 
-\tb{1 page / explain how typical constraints are expressed by different constraint languages}
+\tb{0.75 page / explain how typical constraints are expressed by different constraint languages}
 
 \section{Conclusion and Future Work}
 
