set focus on constraint type classification

--- a/paper/paper7/paper7-evaluation.tex
+++ b/paper/paper7/paper7-evaluation.tex
@@ -900,7 +900,7 @@ In this sub section, we give details about the evaluation in form of diverse tab
     \\ \midrule
 		\emph{DISCO-C-VALUE-IS-VALID-FOR-DATATYPE-01}\textsuperscript{***} & 30 & 6,932 & $\checkmark$ \\
 		\emph{DISCO-C-VALUE-IS-VALID-FOR-DATATYPE-02}\textsuperscript{***} & $\checkmark$ & $\checkmark$ & $\checkmark$ \\
-		\emph{DISCO-C-SUBSUMPTION-01 (!)}\textsuperscript{***} \\
+		\emph{DISCO-C-SUBSUMPTION-01 (!)}\textsuperscript{***}\textsuperscript{B} \\
 		\emph{DISCO-C-CLASS-EQUIVALENCE-01 (!)}\textsuperscript{*} \\
 		\emph{DISCO-C-SUB-PROPERTIES-01 (!)}\textsuperscript{***} \\
 		\emph{DISCO-C-PROPERTY-DOMAIN-01 (!)}\textsuperscript{***} \\
